[package]
name = "psp22_token_extension"
version = "5.0.0"
authors = ["Lunes  <contact@lunes.io>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "~4.2.1", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush = { tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22"] }
[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []